<resources>
    <string name="app_name">Glory Games</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="sample_text">Sample Text</string>
    <string name="text_total_ratings">Total Ratings:</string>
    <string name="text_playtime">Playtime :</string>
    <string name="text_rating">Rating :</string>
    <string name="text_detail_dummy">(API does not include description) lorem itsum dolor amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="text_12_june_2025">12 June 2025</string>
    <string name="title_favorite">Favorite</string>
</resources>
