<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rif.glorygames.detail.DetailGameActivity"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail_game">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textSize="22sp"
            android:paddingBottom="6dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_detail_description_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_detail_dummy"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <ImageView
            android:id="@+id/iv_playtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_gamepad_24"
            android:contentDescription="rating"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_playtime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_playtime" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_12_june_2025"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />


        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_star_24"
            android:contentDescription="star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_rating" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="6dp"
            android:text="@string/text_rating"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_release_date" />

        <TextView
            android:id="@+id/tv_detail_rating_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/sample_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_rating" />

        <TextView
            android:id="@+id/tv_detail_playtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_playtime"
            android:paddingStart="6dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_playtime"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_rating" />

        <TextView
            android:id="@+id/tv_detail_playtime_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/sample_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_playtime"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_playtime" />

        <ImageView
            android:id="@+id/iv_total_ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_handshake_24"
            android:contentDescription="love_icon"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_rating_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_rating_count" />

        <TextView
            android:id="@+id/tv_detail_rating_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:text="@string/text_total_ratings"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_total_ratings"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_playtime" />

        <TextView
            android:id="@+id/tv_detail_total_rating_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/sample_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_rating_count"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_rating_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>